--- a/src/main/java/org/lizlooney/pitchdetector/AndroidManifest.xml
+++ b/src/main/java/org/lizlooney/pitchdetector/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
  Copyright 2025 Google LLC
 
@@ -14,29 +15,33 @@
  limitations under the License.
 -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="org.lizlooney.pitchdetector"
-  android:versionCode="1"
-  android:versionName="1.0" >
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="org.lizlooney.pitchdetector"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-  <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
-  <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="35" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
-  <application
-    android:icon="@drawable/icon"
-    android:label="@string/app_name">
+    <application
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        tools:targetApi="35" >
+        <activity
+            android:name=".PitchDetectorActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:label="@string/Title" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-    <activity android:name=".PitchDetectorActivity"
-      android:exported="true"
-      android:screenOrientation="portrait"
-      android:windowSoftInputMode="stateAlwaysHidden"
-      android:label="@string/Title">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-
-  </application>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
